[workspace]
members = [
    "contracts/restaking-base",
    "contracts/test-token",
    "contracts/mock-consumer-chain-pos"
]

resolver = "2"

[profile.release]
codegen-units = 1
# s = optimize for binary size ("z" would additionally turn off loop vectorization)
opt-level = "s"
# link time optimization
lto = true
debug = false
panic = "abort"
overflow-checks = true