[package]
name = "restaking-base-contract"
version = "1.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
uint = { version = "0.9.0", default-features = false }
itertools = "0.10.0"
regex = "1.8.4"
near-units = "0.2.0"

[dev-dependencies]
workspaces = "0.7.0"
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1.68"